force-app/main/trial-match/objects/Trial_Match__c/Trial_Match__c.object-meta.xml
<CustomObject>
    <label>Trial Match</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Trial Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>