force-app/main/trial-match/objects/Trial_Match__c/fields/Is_User_notified__c.field-meta.xml
<CustomField>
    <fullName>Is_User_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User notified</label>
    <type>Checkbox</type>
</CustomField>