force-app/main/trial-match/objects/Trial_Match__c/fields/Matching_Details__c.field-meta.xml
<CustomField>
    <fullName>Matching_Details__c</fullName>
    <label>Matching Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>