force-app/main/trial-match/objects/Trial_Match__c/fields/Matching_Score__c.field-meta.xml
<CustomField>
    <fullName>Matching_Score__c</fullName>
    <label>Matching Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>