force-app/main/trial-match/objects/Trial_Match__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>